tests/toy/neg/000758_mutation.toylang
program a = { a = 0 if; } .
